Table of contact lists and form to create a contact list
